--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yan Carlos</title>
+
+  <!-- Dev Icons -->
+  <link class="no-color" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 </head>
 
 <body>
